...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Managing tasks just become easier!"
            android:id="@+id/textView"
            android:textColor="@color/abc_primary_text_disable_only_material_dark"
            android:layout_above="@+id/B_signInForm"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="59dp"
            android:gravity="center"
            android:layout_gravity="center" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/B_signUp"
            android:onClick="onButtonClick"
            android:background="@drawable/ripple"
            android:textColor="#ffffff"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginBottom="104dp"
            android:layout_alignParentBottom="true"
...
