...
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Name"
        android:textAllCaps="true"
        android:id="@+id/Text_name"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <TextView
...
        android:layout_marginTop="15dp"
        android:textColor="@color/abc_primary_text_disable_only_material_dark" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/List_groups"
        android:layout_below="@+id/Text_taskLists"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/B_addNewList"
        android:choiceMode="singleChoice"
        android:layout_marginTop="20dp"
        android:background="@color/accent" />
...
