...
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:ems="10"
                android:id="@+id/TextField_email"
                android:layout_alignParentTop="true"
                android:layout_alignLeft="@+id/TextField_password"
                android:layout_alignStart="@+id/TextField_password"
                android:layout_marginTop="110dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordInput"
...
                android:layout_below="@+id/TextField_email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/B_signIn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:paddingLeft="35dp"
            android:paddingRight="35dp"
            android:layout_below="@+id/passwordInput"
...
